report for lab02

--- a/labs/lab02/report/os2--lab02--report.qmd
+++ b/labs/lab02/report/os2--lab02--report.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №2"
+subtitle: "Гелдиев Ыхлас"
 license: "CC BY"
 ## Generic options
 lang: ru-RU
@@ -74,44 +74,207 @@ format:
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы. Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.  Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получить представление о работе с учётными записями пользователей и группами пользователей в операционной системе типа Linux.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
+1. Прочитайте справочное описание man по командам ls, whoami, id, groups, su, sudo, passwd, vi, visudo, useradd, usermod, userdel, groupadd, groupdel.
 
-# Теоретическое введение
+![Все `man`](image/all_man.png)
 
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
+2. Выполните действия по переключению между учётными записями пользователей, по управлению учётными записями пользователей (раздел 2.4.1).
 
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
+3. Выполните действия по созданию пользователей и управлению их учётными записями (раздел 2.4.2).
 
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+4. Выполните действия по работе с группами пользователей (раздел 2.4.3).
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Переключение учётных записей пользователей
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+1. Войдите в систему как обычный пользователь и откройте терминал.
+
+2. Определите, какую учётную запись пользователя вы используете, введя команду `whoami`. Выведите на экран более подробную информацию, используя команду `id`
+
+![`whoami`](image/whoami_id.png)
+
+- ? В отчёте дайте пояснение по отображённой информации.
+
+- uid — это идентификатор пользователя (число, назначенное пользователю).
+- gid — это идентификатор группы (число, назначенное группе).
+- groups — это список групп пользователя (числа и/или имена групп).
+- context — это окружение выполнения процесса (переменные, права, текущая сессия и связанные идентификаторы).
+
+3. Используйте команду su для переключения к учётной записи root. При запросе пароля введите пароль пользователя root. Наберите `id`. В отчёте дайте пояснение по отображённой информации.
+
+![`su id`](image/su_id.png)
+
+4. Вернитесь к учётной записи своего пользователя: `su имя_пользователя` или воспользуйтесь комбинацией клавиш `Ctrl + d` или командой `exit`
+
+![`su имя_пользователя`](image/su_igeldiev.png)
+
+5. Просмотрите в безопасном режиме файл /etc/sudoers, используя, например, `sudo -i visudo`.
+
+![`sudo -i visudo`](image/sudo_i_visudo.png)
+
+- ? В отчёте поясните, почему для работы с файлом /etc/sudoers требуется использовать visudo, а не произвольный редактор.
+
+- visudo проверяет синтаксис и блокирует `/etc/sudoers`, предотвращая ошибки, которые обычный редактор мог бы записать и вывести `sudo` из‑строя.
+
+6. Убедитесь, что в открытом с помощью visudo файле присутствует строка
+`%wheel ALL=(ALL) ALL`
+
+![`%wheel ALL=(ALL) ALL`](image/wheel_all.png)
+
+- ? В отчёте поясните, что это означает и для чего нужна группа wheel.
+
+- `%wheel ALL=(ALL) ALL` — разрешает всем пользователям, входящим в группу wheel, выполнять любые команды от имени любого пользователя (в том числе root) через sudo.
+
+7. Создайте пользователя alice, входящего в группу wheel: `sudo -i useradd -G wheel alice` ([рис. @fig-001])
+
+8. Убедитесь, что пользователь alice добавлен в группу wheel, введя `id alice` ([рис. @fig-001])
+
+9. Задайте пароль для пользователя alice, набрав `sudo -i passwd alice`. Пароль требуется ввести дважды. ([рис. @fig-001])
+
+![Создаем alice](image/alice.png){#fig-001}
+
+10. Переключитесь на учётную запись пользователя alice: `su alice`
+
+![`su alice`](image/su_alice.png)
+
+11. Создайте пользователя bob: `sudo useradd bob`. Введите пароль при запросе. Проверьте, что пользователь bob создан. ([рис. @fig-002])
+
+12. Установите пароль для пользователя bob: `sudo passwd bob` ([рис. @fig-002])
+
+13. Просмотрите, в какие группы входит пользователь bob: `id bob` ([рис. @fig-002])
+
+![Создаем bob](image/bob.png){#fig-002}
+
+## Создание учётных записей пользователей
+
+### Применим общие решения для создания учётных записей пользователей.
+
+1. Переключитесь в терминале на учётную запись пользователя root: `su`
+
+![`su`](image/su.png) 
+
+2. Откройте файл конфигурации /etc/login.defs для редактирования, используя, например, vim (не забудьте, что требуются полномочия пользователя root): `vim /etc/login.defs`. Измените несколько параметров. Например, найдите параметр `CREATE_HOME` и убедитесь, что он установлен в значение `yes`. Также установите параметр `USERGROUPS_ENAB no`. Это позволит не добавлять нового пользователя в группу с тем же именем, что и пользователь, а использовать группу `users`.
+
+![`CREATE_HOME`](image/create_home_yes.png){#fig-007}
+
+![`USERGROUP_ENAB`](image/usergroup_enab_yes.png){#fig-008}
+
+3. Перейдите в каталог `/etc/skel`: `cd /etc/skel`. Создайте каталоги Pictures и Documents: `mkdir Pictures` и `mkdir Documents`. Это позволит добавить эти каталоги по умолчанию во все домашние каталоги пользователей.
+
+![Pictures and Documents](image/pictures_documents.png)
+
+4. Измените содержимое файла .bashrc, добавив строку `export EDITOR=/usr/bin/vim` или `export EDITOR=/usr/bin/mceditor`. Эта запись означает, что текстовый редактор vim или редактор mceditor будет установлен по умолчанию для инструментов, которые нуждаются в изменении текстовых файлов.
+
+![`export EDITOR`](image/export_editor.png)
+
+5. Переключитесь в терминале на учётную запись пользователя `alice`: `su alice` ([рис. @fig-003])
+
+6. Используя утилиту useradd, создайте пользователя carol: `sudo -i useradd carol` ([рис. @fig-003])
+
+![Создаем `carol`](image/useradd_carol.png){#fig-003}
+
+7. Установите пароль для пользователя carol: `sudo passwd carol`
+
+![`sudo passwd carol`](image/passwd_carol.png)
+
+8. Посмотрите и прокомментируйте информацию о пользователе carol, проверьте, в какую первоначальную группу входит пользователь `carol`; Также убедитесь, что каталоги Pictures и Documents были созданы в домашнем каталоге пользователя carol ([рис. @fig-004]):
+
+- `su carol`
+- `id`
+- `cd`
+- `ls -Al`
+
+
+9. Переключитесь в терминале на учётную запись пользователя alice: `su alice` ([рис. @fig-004])
+
+10. Поясните в отчёте строку записи о пароле пользователя carol в файле /etc/shadow: `sudo cat /etc/shadow | grep carol` ([рис. @fig-004])
+
+11. Измените свойства пароля пользователя carol следующим образом: `sudo passwd -n 30 -w 3 -x 90 carol`. В этой записи срок действия пароля истекает через 90 дней (-x 90). За три дня до истечения срока действия пользователь получит предупреждение (-w 3). Пароль должен использоваться как минимум за 30 дней (-n 30) до того, как его можно будет изменить. ([рис. @fig-004])
+
+![Настраиваем `carol`](image/setting_up_carol.png){#fig-004}
+
+12. Убедитесь в изменении в строке с данными о пароле пользователя carol в файле /etc/shadow: `sudo cat /etc/shadow | grep carol` ([рис. @fig-005])
+
+13. Убедитесь, что идентификатор alice существует во всех трёх файлах: `grep alice /etc/passwd /etc/shadow /etc/group` ([рис. @fig-005])
+
+14. Убедитесь, что идентификатор carol существует не во всех трёх файлах: `sudo grep carol /etc/passwd /etc/shadow /etc/group`([рис. @fig-005])
+
+![Убеждаемся и проверяем](image/grep_passwd.png){#fig-005}
+
+## Работа с группами
+
+### В этом упражнении требуется создать две группы и добавить некоторых пользователей в эти группы.
+
+1. Находясь под учётной записью пользователя alice, создайте группы main и third:
+`sudo groupadd main`
+`sudo groupadd third`
+
+![Создаем группы](image/adding_groups.png)
+
+2. Используйте usermod для добавления пользователей alice и bob в группу main,
+а carol, dan, dave и david — в группу third ([рис. @fig-006]):
+`sudo usermod -aG main alice`
+`sudo usermod -aG main bob`
+`sudo usermod -aG third carol`
+
+3. Убедитесь, что пользователь carol правильно добавлен в группу third: `id carol`. Пользователю carol должна быть назначена основная группа с идентификатором `gid = 100 (users)`. Определите, в какие вторичные группы входит carol. ([рис. @fig-006])
+
+![Добавляем в группы и проверяем](image/adding_to_groups.png){#fig-006}
+
+4. Определите, участниками каких групп являются другие созданные вами пользователи. Укажите эту информацию в отчёте.
+
+![`getent group`](image/getent.png)
+
+# Контрольные вопросы
+
+1. При помощи каких команд можно получить информацию о номере (идентификаторе), назначенном пользователю Linux, о группах, в которые включён пользователь?
+
+- Информация о UID и группах: `id`, `id -u`, `id -g`, `groups`.
+
+2. Какой UID имеет пользователь root? При помощи какой команды можно узнать UID пользователя? Приведите примеры.
+
+- UID `root = 0`; узнать UID: `id -u username` (пример: `id -u alice`).
+
+3. В чём состоит различие между командами `su` и `sudo`?
+
+- su переключает пользователя в терминале; `sudo` выполняет отдельные команды от имени другого пользователя (обычно root) по политике, без полного переключения.
+
+4. В каком конфигурационном файле определяются параметры sudo?
+
+- Параметры `sudo` задаются в` /etc/sudoers` (или в файлах `/etc/sudoers.d/`).
+
+5. Какую команду следует использовать для безопасного изменения конфигурации sudo?
+
+- Для безопасного редактирования `sudo`‑конфигурации используйте visudo.
+
+6. Если вы хотите предоставить пользователю доступ ко всем командам администрирования системы через sudo, членом какой группы он должен быть?
+
+- Чтобы иметь доступ ко всем командам, пользователь должен быть членом группы `wheel` (на некоторых дистрибутивах `sudo`).
+
+7. Какие файлы/каталоги можно использовать для определения параметров, которые будут использоваться при создании учётных записей пользователей? Приведите примеры настроек.
+
+- Параметры создания учётных записей берутся из `/etc/login.defs` и `/etc/default/useradd` (например, `UID_MIN`, `HOME_MODE`). ([рис. @fig-007]) ([рис. @fig-008])
+
+8. Где хранится информация о первичной и дополнительных группах пользователей ОС типа Linux? В отчёте приведите пояснение таких записей для пользователя `alice`.
+
+- Информация о группах хранится в `/etc/group`; для `alice` - `alice:x:1001:alice,staff` (первичная `gid = 1001`, дополнительные группы = `alice`, `staff`).
+
+9. Какие команды вы можете использовать для изменения информации о пароле пользователя (например о сроке действия пароля)?
+
+- Для изменения параметров пароля используйте `sudo passwd`.
+
+10. Какую команду следует использовать для прямого изменения информации в файле `/etc/group` и почему?
+
+- Прямое изменение /etc/group делается командой `gpasswd` (или `usermod -G`), потому что они обновляют файл безопасно, проверяя синтаксис и блокировки.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
+Я получил представление о работе с учётными записями пользователей и группами пользователей в операционных системах типа Linux.
 
 # Список литературы{.unnumbered}
 
