presentation for lab02

--- a/labs/lab02/presentation/os2--lab02--presentation.qmd
+++ b/labs/lab02/presentation/os2--lab02--presentation.qmd
@@ -3,10 +3,10 @@
 
 ## Author
 author:
-  name: Дмитрий Сергеевич Кулябов
+  name: Гелдиев Ыхлас
   degrees: DSc
   orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
+  email: 1032249184@pfur.ru
   affiliation:
     - name: Российский университет дружбы народов
       country: Российская Федерация
@@ -14,8 +14,8 @@ author:
       city: Москва
       address: ул. Миклухо-Маклая, д. 6
 ## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
+title: Лабораторная работа №2
+subtitle: Гелдиев Ыхлас
 license: CC BY
 date: 1970-01-01
 ## Generic options
@@ -28,6 +28,11 @@ crossref:
 format:
 ### Pdf output format
   beamer:
+    include-in-header: 
+      text: |
+        \usepackage{fontspec}
+        \setmainfont{Noto Serif}
+        \setsansfont{Noto Sans}
     toc: true
     toc-title: Содержание
     number-sections: true
@@ -55,178 +60,183 @@ format:
 
 ## Докладчик
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
-
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
+  * Гелдиев Ыхлас
+  * студент
+  * студент Направления Прикладная Информатика 
   * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+  * [1032249184@pfur.ru](mailto:1032249184@pfur.ru)
+  * <https://geldiyevy.github.io/ru/>
 
-:::
-::: {.column width="30%"}
+## Цель работы
 
-![](./image/kulyabov.jpg)
+Получить представление о работе с учётными записями пользователей и группами пользователей в операционной системе типа Linux.
 
-:::
-::::::::::::::
+# Задание
 
-# Вводная часть
+## Прочитайте справочное описание man по командам ls, whoami, id, groups, su, sudo, passwd, vi, visudo, useradd, usermod, userdel, groupadd, groupdel.
 
-## Актуальность
+![Все `man`](image/all_man.png)
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+1. Выполните действия по переключению между учётными записями пользователей, по управлению учётными записями пользователей (раздел 2.4.1).
 
-## Объект и предмет исследования
+2. Выполните действия по созданию пользователей и управлению их учётными записями (раздел 2.4.2).
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+3. Выполните действия по работе с группами пользователей (раздел 2.4.3).
 
-## Цели и задачи
+# Выполнение лабораторной работы
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+## Переключение учётных записей пользователей
 
-## Материалы и методы
+1. Войдите в систему как обычный пользователь и откройте терминал.
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+2. Определите, какую учётную запись пользователя вы используете, введя команду `whoami`. Выведите на экран более подробную информацию, используя команду `id`
 
-# Создание презентации
+![`whoami`](image/whoami_id.png)
 
-## Процессор `pandoc`
+## В отчёте дайте пояснение по отображённой информации.
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+- uid — это идентификатор пользователя (число, назначенное пользователю).
+- gid — это идентификатор группы (число, назначенное группе).
+- groups — это список групп пользователя (числа и/или имена групп).
+- context — это окружение выполнения процесса (переменные, права, текущая сессия и связанные идентификаторы).
 
-## Формат `pdf`
+## Используйте команду su для переключения к учётной записи root. При запросе пароля введите пароль пользователя root. Наберите `id`. В отчёте дайте пояснение по отображённой информации.
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![`su id`](image/su_id.png)
 
-## Код для формата `pdf`
+## Вернитесь к учётной записи своего пользователя: `su имя_пользователя` или воспользуйтесь комбинацией клавиш `Ctrl + d` или командой `exit`
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+![`su имя_пользователя`](image/su_igeldiev.png)
 
-## Формат `html`
+## Просмотрите в безопасном режиме файл /etc/sudoers, используя, например, `sudo -i visudo`.
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+![`sudo -i visudo`](image/sudo_i_visudo.png)
 
-## Код для формата `html`
+## В отчёте поясните, почему для работы с файлом /etc/sudoers требуется использовать visudo, а не произвольный редактор.
 
-- Тема задаётся в файле `Makefile`
+- visudo проверяет синтаксис и блокирует `/etc/sudoers`, предотвращая ошибки, которые обычный редактор мог бы записать и вывести `sudo` из‑строя.
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+## Убедитесь, что в открытом с помощью visudo файле присутствует строка
+`%wheel ALL=(ALL) ALL`
 
-## Получающиеся форматы
+![`%wheel ALL=(ALL) ALL`](image/wheel_all.png)
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+## В отчёте поясните, что это означает и для чего нужна группа wheel.
 
-# Элементы презентации
+- `%wheel ALL=(ALL) ALL` — разрешает всем пользователям, входящим в группу wheel, выполнять любые команды от имени любого пользователя (в том числе root) через sudo.
 
-## Актуальность
+## Создайте пользователя alice, входящего в группу wheel: `sudo -i useradd -G wheel alice` ([рис. @fig-001])
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+8. Убедитесь, что пользователь alice добавлен в группу wheel, введя `id alice` ([рис. @fig-001])
 
-## Цели и задачи
+9. Задайте пароль для пользователя alice, набрав `sudo -i passwd alice`. Пароль требуется ввести дважды. ([рис. @fig-001])
 
-- Не формулируйте более 1--2 целей исследования
+##
 
-## Материалы и методы
+![Создаем alice](image/alice.png){#fig-001}
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+## Переключитесь на учётную запись пользователя alice: `su alice`
 
-## Содержание исследования
+![`su alice`](image/su_alice.png)
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+## Создайте пользователя bob: `sudo useradd bob`. Введите пароль при запросе. Проверьте, что пользователь bob создан. ([рис. @fig-002])
 
-## Результаты
+12. Установите пароль для пользователя bob: `sudo passwd bob` ([рис. @fig-002])
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+13. Просмотрите, в какие группы входит пользователь bob: `id bob` ([рис. @fig-002])
+
+##
+
+![Создаем bob](image/bob.png){#fig-002}
+
+## Создание учётных записей пользователей
+
+### Применим общие решения для создания учётных записей пользователей.
+
+## Переключитесь в терминале на учётную запись пользователя root: `su`
+
+![`su`](image/su.png) 
+
+## Откройте файл конфигурации /etc/login.defs для редактирования, используя, например, vim (не забудьте, что требуются полномочия пользователя root): `vim /etc/login.defs`. Измените несколько параметров. Например, найдите параметр `CREATE_HOME` и убедитесь, что он установлен в значение `yes`. Также установите параметр `USERGROUPS_ENAB no`. Это позволит не добавлять нового пользователя в группу с тем же именем, что и пользователь, а использовать группу `users`.
+
+![`CREATE_HOME`](image/create_home_yes.png){#fig-007}
+
+##
+
+![`USERGROUP_ENAB`](image/usergroup_enab_yes.png){#fig-008}
+
+## Перейдите в каталог `/etc/skel`: `cd /etc/skel`. Создайте каталоги Pictures и Documents: `mkdir Pictures` и `mkdir Documents`. Это позволит добавить эти каталоги по умолчанию во все домашние каталоги пользователей.
+
+![Pictures and Documents](image/pictures_documents.png)
+
+## Измените содержимое файла .bashrc, добавив строку `export EDITOR=/usr/bin/vim` или `export EDITOR=/usr/bin/mceditor`. Эта запись означает, что текстовый редактор vim или редактор mceditor будет установлен по умолчанию для инструментов, которые нуждаются в изменении текстовых файлов.
+
+![`export EDITOR`](image/export_editor.png)
+
+## Переключитесь в терминале на учётную запись пользователя `alice`: `su alice` ([рис. @fig-003])
+
+6. Используя утилиту useradd, создайте пользователя carol: `sudo -i useradd carol` ([рис. @fig-003])
+
+##
+
+![Создаем `carol`](image/useradd_carol.png){#fig-003}
+
+## Установите пароль для пользователя carol: `sudo passwd carol`
+
+![`sudo passwd carol`](image/passwd_carol.png)
+
+## Посмотрите и прокомментируйте информацию о пользователе carol, проверьте, в какую первоначальную группу входит пользователь `carol`; Также убедитесь, что каталоги Pictures и Documents были созданы в домашнем каталоге пользователя carol ([рис. @fig-004]):
+
+- `su carol`
+- `id`
+- `cd`
+- `ls -Al`
 
 
-## Итоговый слайд
+## Переключитесь в терминале на учётную запись пользователя alice: `su alice` ([рис. @fig-004])
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+10. Поясните в отчёте строку записи о пароле пользователя carol в файле /etc/shadow: `sudo cat /etc/shadow | grep carol` ([рис. @fig-004])
 
-# Рекомендую
+11. Измените свойства пароля пользователя carol следующим образом: `sudo passwd -n 30 -w 3 -x 90 carol`. В этой записи срок действия пароля истекает через 90 дней (-x 90). За три дня до истечения срока действия пользователь получит предупреждение (-w 3). Пароль должен использоваться как минимум за 30 дней (-n 30) до того, как его можно будет изменить. ([рис. @fig-004])
 
-## Принцип 10/20/30
+##
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+![Настраиваем `carol`](image/setting_up_carol.png){#fig-004}
 
-## Связь слайдов
+## Убедитесь в изменении в строке с данными о пароле пользователя carol в файле /etc/shadow: `sudo cat /etc/shadow | grep carol` ([рис. @fig-005])
 
-::: incremental
+13. Убедитесь, что идентификатор alice существует во всех трёх файлах: `grep alice /etc/passwd /etc/shadow /etc/group` ([рис. @fig-005])
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+14. Убедитесь, что идентификатор carol существует не во всех трёх файлах: `sudo grep carol /etc/passwd /etc/shadow /etc/group`([рис. @fig-005])
 
-:::
+##
 
-## Количество сущностей
+![Убеждаемся и проверяем](image/grep_passwd.png){#fig-005}
 
-::: incremental
+## Работа с группами
 
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
+### В этом упражнении требуется создать две группы и добавить некоторых пользователей в эти группы.
 
-:::
+## Находясь под учётной записью пользователя alice, создайте группы main и third:
+`sudo groupadd main`
+`sudo groupadd third`
 
-## Общие рекомендации
+![Создаем группы](image/adding_groups.png)
 
-::: incremental
+## Используйте usermod для добавления пользователей alice и bob в группу main,
+а carol, dan, dave и david — в группу third ([рис. @fig-006]):
+`sudo usermod -aG main alice`
+`sudo usermod -aG main bob`
+`sudo usermod -aG third carol`
 
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
+## Убедитесь, что пользователь carol правильно добавлен в группу third: `id carol`. Пользователю carol должна быть назначена основная группа с идентификатором `gid = 100 (users)`. Определите, в какие вторичные группы входит carol. ([рис. @fig-006])
 
-:::
+![Добавляем в группы и проверяем](image/adding_to_groups.png){#fig-006}
 
-## Представление данных
+## Определите, участниками каких групп являются другие созданные вами пользователи. Укажите эту информацию в отчёте.
 
-::: incremental
+![`getent group`](image/getent.png)
 
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
+## Выводы
 
-:::
+Я получил представление о работе с учётными записями пользователей и группами пользователей в операционных системах типа Linux.
