presentation for lab03 done

--- a/labs/lab03/report/os2--lab03--report.qmd
+++ b/labs/lab03/report/os2--lab03--report.qmd
@@ -102,7 +102,7 @@ format:
 `chgrp main /data/main`
 `chgrp third /data/third`
 
-Посмотрите, кто теперь является владельцем этих каталогов: ([рис. @fig:001])
+Посмотрите, кто теперь является владельцем этих каталогов: ([рис. @fig-001])
 `ls -Al /data`
 
 4. Установите разрешения, позволяющие владельцам каталогов записывать файлы в эти каталоги и запрещающие доступ к содержимому каталогов всем другим пользователям и группам: ([рис. @fig-001])
